update tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,7 @@ bind -n C-Down select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+bind-key -n MouseDrag1Status swap-window -t=
 
 # don't rename windows automatically
 set-option -g allow-rename off
