--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,10 +23,10 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes using Alt-arrow without prefix
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+# bind -n C-Left select-pane -L
+# bind -n C-Right select-pane -R
+# bind -n C-Up select-pane -U
+# bind -n C-Down select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -35,45 +35,6 @@ bind-key -n MouseDrag1Status swap-window -t=
 # don't rename windows automatically
 set-option -g allow-rename off
 
-######################
-### DESIGN CHANGES ###
-######################
-
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
-
-#  modes
-setw -g clock-mode-colour colour5
-setw -g mode-style fg=colour1,bg=colour18,bold
-
-# panes
-set -g pane-border-style fg=colour19,bg=colour0
-set -g pane-active-border-style fg=colour10,bg=colour0
-
-# # statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style fg=colour137,bg=colour18,dim
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-style fg=colour1,bg=colour19,bold
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-
-setw -g window-status-style fg=colour9,bg=colour18,none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style fg=colour255,bg=colour1,bold
-
-# messages
-set -g message-style fg=colour16,bg=colour232,bold
-
 ###########################
 ### Tmux Plugin Manager ###
 ###########################
@@ -81,12 +42,16 @@ set -g message-style fg=colour16,bg=colour232,bold
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
+set -g @plugin "arcticicestudio/nord-tmux"
+
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
