--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -325,12 +325,12 @@ background_opacity: 0.95
 #   - (macOS) /bin/bash --login
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
-shell:
-  program: /bin/bash
-  args:
-    - -l
-    - -c
-    - "tmux attach || tmux"
+# shell:
+#   program: /bin/bash
+#   args:
+#     - -l
+#     - -c
+#     - "tmux attach || tmux"
 
 # Startup directory
 #
