--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# use default shell
+set-option -g default-shell $SHELL
 
 # force 256 colours and normal keys
 set -g default-terminal "screen-256color"
@@ -10,8 +12,8 @@ bind-key C-a send-prefix
 
 # Number windows and panes starting at 1 so that we can jump to
 # them easier.
-set -g base-index 1
-set -g pane-base-index 1
+# set -g base-index 1
+# set -g pane-base-index 1
 
 # split panes using | and -
 bind | split-window -h
