--- a/vscode/extensions.json
+++ b/vscode/extensions.json
@@ -6,7 +6,12 @@
         "esbenp.prettier-vscode",
         "golf1052.code-sync",
         "hashicorp.terraform",
+        "infeng.vscode-react-typescript",
+        "ionutvmi.path-autocomplete",
         "mhutchie.git-graph",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "rafaelsalguero.csharp2ts",
+        "Shan.code-settings-sync",
+        "VisualStudioExptTeam.vscodeintellicode"
     ]
 }
